# itr

./: .gitignore  .itr.db  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RUST_SCORE.md  STORY_STYLE.md  build.rs  deny.toml  install.ps1  install.sh  itr-plan.md  justfile  nit-plan.md  uninstall.sh
.github/workflows/: auto-version.yml  ci.yml  release.yml
docs/: ROADMAP.md  architecture.md  backup-import-export.md  command-contracts.md  environment.md  limitations.md  migrations.md  schema.md  search.md  security.md  soft_fallbacks.md  testing.md  troubleshooting.md  ui-api.md  urgency.md
skills/itr/: SKILL.md
sprint/_unscoped/: blitz-2026-05-18-verify.md  blitz-2026-05-19-review.md  blitz-2026-05-19T03-36-23Z.md  blitz-2026-05-19T05-00-12Z.md  blitz-2026-05-29T18-52-09Z.md  blitz-2026-06-09T23-01-37Z.md
src/: agent_docs.rs  cli.rs  db.rs  error.rs  format.rs  main.rs  models.rs  normalize.rs  urgency.rs  util.rs  version_shape.rs
src/commands/: add.rs  agent_info.rs  assign.rs  batch.rs  bulk.rs  close.rs  config.rs  depend.rs  doctor.rs  export.rs  get.rs  graph.rs  import.rs  init.rs  list.rs  log.rs  mod.rs  next.rs  note.rs  ready.rs  reindex.rs  relate.rs  schema.rs  search.rs  skill.rs  stats.rs  summary.rs  ui.rs  update.rs  upgrade.rs
src/ui_assets/: app.css  app.js  index.html
tests/: integration.sh
tests/contracts/: _lib.sh  baseline_tool.sh  batch_bulk.sh  core.sh  determinism_time.sh  example.sh  help.sh  ui.sh
tests/snapshots/batch_bulk/: batch_add_compact.txt  batch_add_json.txt  batch_add_softfallback.txt  batch_close_dryrun.txt  batch_close_idempotent.txt  batch_close_partial.txt  batch_create_alias.txt  batch_note_partial.txt  batch_update_dryrun.txt  batch_update_partial.txt  bulk_close_dryrun.txt  bulk_close_json.txt  bulk_close_nofilters.txt  bulk_close_real.txt  bulk_close_unblocked.txt  bulk_update_dryrun.txt  bulk_update_real.txt  export_json.txt  export_jsonl.txt  import_file.txt  import_file_missing.txt  import_jsonl_stdin.txt  import_merge_stdin.txt
tests/snapshots/core/: add_compact.txt  add_json.txt  add_soft_priority.txt  assign_compact.txt  assign_json.txt  claim_json.txt  close_compact.txt  close_json.txt  close_wontfix.txt  create_alias.txt  current_alias.txt  depend_compact.txt  depend_cycle.txt  depend_json.txt  deps_alias.txt  get_compact.txt  get_json.txt  get_notfound.txt  get_notfound_json.txt  graph_compact.txt  graph_json.txt  graph_pretty.txt  init_compact.txt  init_json.txt  list_compact.txt  list_fields.txt  list_json.txt  list_oneline.txt  list_pretty.txt  log_compact.txt  log_empty.txt  log_json.txt  next_compact.txt  next_json.txt  note_compact.txt  note_delete_compact.txt  note_delete_json.txt  note_json.txt  note_notfound.txt  note_update_compact.txt  (+29 more)
tests/snapshots/example/: add.txt  empty_list.txt  get_issue.txt  schema.txt  version.txt
tests/snapshots/help/: agent_info.txt  agent_info_json.txt  alias_create_help.txt  alias_current_help.txt  alias_deps_help.txt  alias_getting_started_help.txt  alias_start_help.txt  batch_add_help.txt  batch_close_help.txt  batch_note_help.txt  batch_update_help.txt  bulk_close_help.txt  bulk_update_help.txt  cmd_add_help.txt  cmd_agent_info_help.txt  cmd_assign_help.txt  cmd_batch_help.txt  cmd_bulk_help.txt  cmd_claim_help.txt  cmd_close_help.txt  cmd_config_help.txt  cmd_depend_help.txt  cmd_doctor_help.txt  cmd_export_help.txt  cmd_get_help.txt  cmd_graph_help.txt  cmd_help_help.txt  cmd_import_help.txt  cmd_init_help.txt  cmd_list_help.txt  cmd_log_help.txt  cmd_next_help.txt  cmd_note_delete_help.txt  cmd_note_help.txt  cmd_note_update_help.txt  cmd_ready_help.txt  cmd_reindex_help.txt  cmd_relate_help.txt  cmd_schema_help.txt  cmd_search_help.txt  (+23 more)
tests/snapshots/ui/: allow_dangerous_review.txt  once_html_fetch.txt  startup_compact.txt  startup_json.txt
tests/tools/: baseline-diff.sh
